--- a/501_550.md
+++ b/501_550.md
@@ -32,7 +32,7 @@ Use Amazon Kinesis Data Analytics to analyze the data in real time.
 -   [ ] Amazon Kinesis Data Firehose is designed for near real-time ingestion of streaming data into destinations like Amazon S3.
 -   [ ] Amazon Kinesis Data Analytics can analyze streaming data in real time.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Kinesis Data Streams requires more management for scaling and data delivery compared to Firehose.
     Lambda is not designed for real-time analytics on streaming data.
@@ -85,7 +85,7 @@ Configure an Amazon CloudFront distribution for the website.
 -   [ ] Auto Scaling groups and Application Load Balancers distribute traffic and improve availability.
 -   [ ] CloudFront caches static content, improving performance.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Mounting an S3 bucket on EC2 instances is not efficient for serving frequently accessed files.
 -   [ ] B. NFS shares from a single EC2 instance introduce a single point of failure.
@@ -123,7 +123,7 @@ A. Ensure that the customers create an IAM role in their account with read-only 
 -   [ ] IAM roles allow for secure delegation of permissions without sharing long-term credentials.
 -   [ ] The trust policy grants the company's account permission to assume the role.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. A token vending machine adds complexity and is not necessary for this use case.
 -   [ ] C. Sharing IAM user credentials (access keys) is insecure.
@@ -163,7 +163,7 @@ Configure static routes from each VPC.
 -   [ ] AWS Transit Gateway simplifies the management of connections between multiple VPCs.
 -   [ ] It reduces the complexity of managing numerous peering connections.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. VPC peering is complex to manage with hundreds of VPCs.
 -   [ ] B. Connecting VPCs through the internet is inefficient and insecure.
@@ -209,7 +209,7 @@ Set a policy to scale out based on CPU usage.
 -   [ ] Auto Scaling can replace any interrupted Spot Instances.
 -   [ ] Scaling based on CPU usage optimizes resource utilization.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and B. Savings Plans and Reserved Instances are cost-effective for continuous usage, not for sporadic nightly jobs.
 -   [ ] D. Increasing instance size is less cost-effective than using Spot Instances.
@@ -250,7 +250,7 @@ Upload files directly from the user's browser into an S3 bucket.
 -   [ ] S3 presigned URLs allow users to upload files directly to S3, offloading the traffic from the application servers.
 -   [ ] S3 is highly scalable and can handle large volumes of uploads.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Uploading files to application servers and then transferring them to S3 increases the load on the servers.
 -   [ ] B. Storage Gateway is for hybrid cloud storage, not for handling large volumes of direct user uploads.
@@ -304,7 +304,7 @@ Use the correct Regional endpoint in each Regional deployment for access to the 
 -   [ ] Read Replicas in each Region can serve local read requests, reducing latency.
 -   [ ] A single primary Aurora database ensures global consistency.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. DynamoDB is a NoSQL database and may require significant application changes.
 -   [ ] C. RDS MySQL read replicas do not provide the same level of performance and global consistency as Aurora.
@@ -374,7 +374,7 @@ Specify the backup schedule to run twice daily.
 -   [ ] It automates backups and cross-Region copies.
 -   [ ] Tag-based backups simplify management.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Copying images on demand adds manual steps.
 -   [ ] C. Using Lambda functions adds complexity.
@@ -420,7 +420,7 @@ Add an inbound deny rule for the IP addresses that are consuming resources.
 -   [ ] Network ACLs operate at the subnet level and can quickly block traffic, reducing the load on the web tier.
 -   [ ] This is an immediate solution to mitigate the performance issue.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and C. Security groups operate at the instance level and are less efficient for blocking traffic at the subnet level.
 -   [ ] D. Modifying the application tier's network ACLs does not address the immediate problem of illegitimate requests hitting the web tier.
@@ -462,7 +462,7 @@ Create an inbound rule in the ap-southeast-2 database security group that allows
 -   [ ] Updating route tables directs traffic between the VPCs.
 -   [ ] Security groups control traffic at the instance level.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Security groups cannot reference IP addresses in another security group across VPC peering connections.
 -   [ ] B. While security groups can reference other security groups, the direction of the peering connection setup is important and the description is incorrect.
@@ -505,7 +505,7 @@ Configure each development environment with its own Amazon Aurora On-Demand Post
 -   [ ] Aurora Serverless v1 (which is what "On-Demand" refers to in the document) automatically starts up, shuts down, and scales capacity based on application needs, making it cost-effective for intermittent use.
 -   [ ] It provides PostgreSQL compatibility, so developers can use their existing schema.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and B.
     Provisioning a full Aurora PostgreSQL database or RDS for PostgreSQL instance for each developer is more expensive, even if not fully utilized.
@@ -555,7 +555,7 @@ Use tags in the backup plan.
 -   [ ] AWS Config can identify resources that are not tagged, allowing for automated tagging.
 -   [ ] AWS Backup can use tags to select resources for backup, simplifying backup management.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     Backing up only non-running resources does not meet the requirement to back up all resources.
@@ -603,7 +603,7 @@ Create a static website hosted in Amazon S3 that invokes AWS Lambda functions to
 -   [ ] S3 is highly scalable for storing images.
 -   [ ] Lambda functions can automatically resize images and scale based on traffic, providing a serverless and cost-effective solution.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     CloudFront is a CDN and not for hosting a static website.
@@ -653,7 +653,7 @@ Create interface VPC endpoints to allow nodes to access the control plane.
 -   [ ] When the EKS control plane has private access enabled, nodes in private subnets need a way to communicate with it.
 -   [ ] Interface VPC endpoints provide this private connectivity.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     IAM permissions are necessary but not sufficient for network connectivity.
@@ -715,7 +715,7 @@ Scaling globally to support petabytes of data and tens of millions of requests p
 
 -   [ ] Redshift is designed for large-scale data warehousing.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     Redshift is not designed for serving data APIs for applications.
@@ -761,7 +761,7 @@ Use Amazon API Gateway and AWS Lambda functions with provisioned concurrency.
 -   [ ] API Gateway and Lambda are serverless, reducing operational overhead.
 -   [ ] Provisioned concurrency ensures low latency by keeping Lambda functions initialized.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and C.
     ECS and EKS require more operational overhead for managing infrastructure.
@@ -810,7 +810,7 @@ Choose an S3 bucket to send the session data to.
 
 -   [ ] Systems Manager directly integrates with S3 for logging, providing the simplest and most efficient way to archive logs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B, C, and D.
     These options involve additional services and configurations, increasing operational overhead.
@@ -850,7 +850,7 @@ Enable storage autoscaling in RDS
 
 -   [ ] RDS storage autoscaling automatically increases storage capacity when needed without downtime.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     Increasing instance size scales compute, not storage.
@@ -895,7 +895,7 @@ Create AWS Service Catalog products for the customers.
 -   [ ] AWS Service Catalog allows organizations to create and manage catalogs of IT services that are approved for use on AWS.
 -   [ ] It enables centralized management and self-service access for customers.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     CloudFormation templates define infrastructure but do not provide self-service access management.
@@ -944,7 +944,7 @@ Configure DynamoDB in on-demand mode by using the DynamoDB Standard table class.
 -   [ ] On-demand mode automatically scales read and write capacity in response to application traffic, making it suitable for unpredictable workloads.
 -   [ ] The Standard table class is appropriate for moderate to high throughput.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and C.
     Provisioned capacity requires specifying read and write capacity units, which is less cost-effective for unpredictable traffic.
@@ -1004,7 +1004,7 @@ Configure the application to use APP_ROLE and assume the crossaccount role BU_RO
 -   [ ] IAM roles provide secure cross-account access by allowing the application to assume a role in each business account.
 -   [ ] This method avoids sharing or embedding long-term credentials.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     Secrets Manager is for storing secrets, not for cross-account authentication for DynamoDB access.
@@ -1058,7 +1058,7 @@ Use the Kubernetes Cluster Autoscaler to manage the number of nodes in the clust
 
 -   [ ] Kubernetes Cluster Autoscaler automatically adjusts the number of nodes in the EKS cluster based on the needs of the pods.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     Using Lambda to resize the EKS cluster adds complexity and requires custom code.
@@ -1102,7 +1102,7 @@ Amazon Athena Federated Query with a DynamoDB connector
 -   [ ] Athena Federated Query allows you to query data across multiple data sources, including DynamoDB, with standard SQL.
 -   [ ] It is serverless and does not impact the performance of the application.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     AppSync is a GraphQL service, not designed for simple data retrieval from multiple DynamoDB tables in a RESTful manner.
@@ -1146,7 +1146,7 @@ Search CloudTrail logs with Amazon Athena queries to identify the errors.
 
 -   [ ] Amazon Athena allows you to query CloudTrail logs using SQL, making it efficient for analyzing specific error types.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and B.
     AWS Glue and AWS Batch require writing and managing custom scripts, which is more complex.
@@ -1190,7 +1190,7 @@ Access usage cost-related data by using the AWS Cost Explorer API with paginatio
 -   [ ] The Cost Explorer API provides programmatic access to cost and usage data.
 -   [ ] Pagination allows for efficient retrieval of large datasets.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     Downloading CSV files is manual and not programmatic.
@@ -1238,7 +1238,7 @@ Update the application to use the proxy endpoint.
 -   [ ] Amazon RDS Proxy minimizes downtime during failovers by maintaining database connections.
 -   [ ] It is transparent to the application, reducing operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     Read replicas do not reduce downtime during writer instance failovers.
@@ -1304,7 +1304,7 @@ Promote the secondary to primary as needed.
 -   [ ] Route 53 health checks and failover routing enable automatic failover.
 -   [ ] Promoting the secondary to primary allows for controlled failover.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     Extending Auto Scaling groups across Regions is not the most efficient way to achieve regional redundancy.
@@ -1371,7 +1371,7 @@ Use an S3 event notification to invoke the Lambda function when the files arrive
 -   [ ] S3 event notifications trigger Lambda, enabling near real-time processing.
 -   [ ] Lambda can delete files after processing.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and B.
     Using EC2 for FTP servers requires more management.
@@ -1418,7 +1418,7 @@ Migrate the databases to Amazon RDS Configure encryption at rest.
 -   [ ] Amazon RDS is a managed database service that reduces operational overhead.
 -   [ ] RDS supports encryption at rest, providing data security.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     EC2 requires more management than RDS.
@@ -1471,7 +1471,7 @@ Configure a Global Accelerator endpoint to use the correct listener ports.
 -   [ ] AWS Global Accelerator improves performance for global applications by routing traffic through AWS's global network.
 -   [ ] It supports both TCP and UDP, which is essential for gaming applications.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     CloudFront is a CDN and is not optimized for real-time, low-latency traffic like gaming.
@@ -1527,7 +1527,7 @@ Provide the Lambda function URL to the third party for the webhook.
 -   [ ] Lambda function URLs provide a dedicated HTTP(S) endpoint for your Lambda function.
 -   [ ] This is the simplest and most efficient way to allow a third party to trigger a Lambda function via a webhook.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     An Application Load Balancer is designed for load balancing HTTP/HTTPS traffic to application servers, not for triggering Lambda functions directly from webhooks.
@@ -1602,7 +1602,7 @@ Import the certificate from AWS Certificate Manager (ACM).
 -   [ ] API Gateway custom domain names allow for user-friendly URLs.
 -   [ ] ACM certificates are used to secure these custom domains.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     ACM certificates must be in the same Region as the API Gateway.
@@ -1655,7 +1655,7 @@ Create an Amazon EventBridge rule to filter the SensitiveData event type from Ma
 -   [ ] EventBridge allows for automated event handling and notifications.
 -   [ ] SNS provides a simple way to notify the security team.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B and D.
     Amazon GuardDuty is a threat detection service, not for PII detection.
@@ -1710,7 +1710,7 @@ Write an expiration action that directs Amazon S3 to delete objects after 90 day
 -   [ ] S3 Glacier Flexible Retrieval is cost-effective for data that needs to be retained for backup purposes but is not frequently accessed.
 -   [ ] S3 Lifecycle policies automate the transition and deletion of objects.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     S3 Standard is more expensive than Glacier for long-term backup.
@@ -1759,7 +1759,7 @@ Enable Amazon EKS KMS secrets encryption on the Amazon EKS cluster.
 -   [ ] Amazon EKS supports encrypting Kubernetes secrets at rest in the etcd key-value store using KMS keys.
 -   [ ] This is the most direct and secure way to meet the requirement.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     Secrets Manager is for storing and managing secrets, not for encrypting secrets within the EKS cluster's etcd store.
@@ -1812,7 +1812,7 @@ Provide read endpoints to the data scientists.
 -   [ ] Readable standby instances allow for read-only access without impacting the primary instance.
 -   [ ] This is more cost-effective than provisioning larger instances or additional clusters.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     Scaling the existing database can impact performance and availability.
@@ -1869,7 +1869,7 @@ Migrate the web server to an Auto Scaling group that is in three Availability Zo
 -   [ ] ElastiCache for Redis is suitable for session data storage and caching.
 -   [ ] Auto Scaling groups in multiple AZs ensure scalability and availability for the web tier.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     Memcached does not support the same level of data persistence and features as Redis.
@@ -1922,7 +1922,7 @@ Set up a custom error message.
 -   [ ] An allow list specifies the countries where the content is allowed.
 -   [ ] A custom error message provides a user-friendly response to blocked viewers.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B.
     Signed URLs and cookies are for controlling access to individual files, not for country-based restrictions.
@@ -1973,7 +1973,7 @@ Configure AWS Database Migration Service (AWS DMS) to use change data capture (C
 -   [ ] DMS with CDC replicates changes in near real-time, meeting the RPO requirement.
 -   [ ] A warm standby setup allows for quicker recovery compared to a cold standby.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     SQL Server Enterprise and Always On availability groups are more expensive than RDS for SQL Server Standard.
@@ -2026,7 +2026,7 @@ Direct the reporting functions to the reader instances.
 -   [ ] Multi-AZ deployments enhance availability.
 -   [ ] Reader instances allow for offloading reporting workload.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A.
     DMS is for database migration, not for ongoing database operations.
@@ -2079,7 +2079,7 @@ E. Use AWS Amplify to serve the frontend web content with HTML, CSS, and JS. Use
 -   [ ] Amazon CloudFront is a content delivery network (CDN) that improves performance by caching content and reducing latency. It also offers scalability and security benefits.
 -   [ ] Using Amplify with CloudFront is a cost-effective way to host and deliver static web content.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. While ECS and Application Load Balancer can handle web traffic, they are generally more suitable for applications with consistent traffic. Lambda is more cost-effective for unpredictable and idle traffic.
 -   [ ] D. Amazon Cognito identity pools provide temporary AWS credentials for users to access AWS services directly. They are typically used for authorizing access to AWS resources, not for user authentication in web applications. User pools (Option C) are the correct choice for authentication.
@@ -2113,7 +2113,7 @@ B. Generate and provide CloudFront signed URLs to premium customers.
 -   [ ] CloudFront signed URLs allow you to control access to your content. You can generate URLs that are valid for a limited time, or for specific users, giving you fine-grained control over who can access your media streams and files.
 -   [ ] This method is ideal for on-demand content delivery, as it allows you to grant access to individual customers for specific content and durations, such as for movie rentals or music downloads.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. S3 signed cookies are used to control access to S3 buckets directly, not CloudFront distributions. While you can use S3 signed URLs, CloudFront signed URLs offer better integration with CloudFront's caching and distribution capabilities.
 -   [ ] C. Origin Access Control (OAC) is used to secure the communication between CloudFront and the origin (in this case, S3). It doesn't provide a mechanism to grant or restrict access to individual users or premium customers.
@@ -2154,7 +2154,7 @@ E. Create an organization in AWS Organizations in the existing AWS account with 
 -   [ ] To effectively share Savings Plans, you need to have your accounts organized within AWS Organizations. The existing account with the Savings Plan can become the management account for the organization.
 -   [ ] By inviting other accounts to join the organization, you enable the Savings Plan discounts to be applied to their EC2 usage.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Discount sharing is not enabled from the AWS Account Management Console of the account that purchased the Savings Plan. It's managed from the management account in AWS Billing and Cost Management.
 -   [ ] C. AWS Resource Access Manager (AWS RAM) is used for sharing specific AWS resources, such as subnets, with other AWS accounts. It is not used for sharing Savings Plans.
@@ -2189,7 +2189,7 @@ A. Create a canary release deployment stage for API Gateway. Deploy the latest A
 -   [ ] This minimizes the impact on customers and allows you to test the new API version in a production environment.
 -   [ ] After verifying the new API version, you can promote the canary stage to the production stage, making it available to all users.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. While importing a new API version in merge mode can update the API, it doesn't provide a controlled rollout like a canary release. Deploying directly to the production stage can lead to issues if the new version has errors.
 -   [ ] C. Overwriting the existing API version with the new version carries a higher risk of disrupting service for all users. If there are any issues with the new version, all users will be affected.
@@ -2223,7 +2223,7 @@ B. Set up a Route 53 active-passive failover configuration. Direct traffic to a 
 -   [ ] Route 53 health checks monitor the health of the primary endpoint. If the health check fails (indicating unavailability), Route 53 automatically routes traffic to the secondary endpoint.
 -   [ ] This solution minimizes changes, as it primarily involves configuring Route 53 and setting up a simple S3 static website for the error page. It also has minimal infrastructure overhead, as S3 is used for hosting the static page.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Latency routing policy routes traffic to the endpoint with the lowest latency. It doesn't provide a failover mechanism to redirect traffic to an error page when the primary website is unavailable.
 -   [ ] C. Active-active configuration distributes traffic across all healthy endpoints. It doesn't provide a way to redirect all traffic to an error page only when the primary website is unavailable. Also, using an EC2 instance for a static error page adds unnecessary infrastructure overhead.
@@ -2260,7 +2260,7 @@ D. Set up AWS Storage Gateway to connect with the backup applications using the 
 -   [ ] This enables you to replace physical tape infrastructure with a more cost-effective and scalable cloud-based solution while preserving your existing investment in backup applications and workflows.
 -   [ ] The VTL interface integrates seamlessly with existing backup software, minimizing the need for changes to backup processes.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using the NFS interface with AWS Storage Gateway is suitable for file shares, not for tape backups. It would require significant changes to the backup applications.
 -   [ ] B. Amazon EFS is a file storage service for use with EC2 instances. It is not designed to replace tape backups or integrate with existing backup applications.
@@ -2293,7 +2293,7 @@ A. Use Amazon Kinesis Data Firehose to deliver streaming data to Amazon S3.
 -   [ ] Kinesis Data Firehose is fully managed, which means it automatically scales to handle high volumes of data and requires minimal operational overhead.
 -   [ ] It provides near real-time data ingestion and delivery, making it suitable for the company's requirements.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. AWS Glue is a fully managed extract, transform, and load (ETL) service. While it can move data, it is primarily designed for batch processing and ETL jobs, not for real-time streaming ingestion.
 -   [ ] C. AWS Lambda can process streaming data, but using it to directly handle high-volume streams and deliver them to S3 would require significant custom code for scaling, buffering, and error handling, increasing operational overhead.
@@ -2327,7 +2327,7 @@ B. Create organization units (OUs) for each department in AWS Organizations. Att
 -   [ ] Service control policies (SCPs) allow you to define AWS service permissions at the OU or organization level, providing centralized control over which services each account can use.
 -   [ ] This approach minimizes operational overhead by enforcing controls at a higher level, rather than managing them individually in each account.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS Systems Manager is designed for managing EC2 instances and other AWS resources, not for controlling which AWS services accounts can use.
 -   [ ] C. AWS CloudFormation is an infrastructure-as-code service for provisioning AWS resources. While it can control what is provisioned, it does not provide ongoing control over which services an account can use.
@@ -2364,7 +2364,7 @@ B. Deploy a NAT gateway in the public subnets. Modify the private subnet route t
 -   [ ] By placing the NAT gateway in the public subnet and routing traffic from the private subnets through it, the MySQL instances can retrieve information from the third-party provider without being directly exposed to the internet.
 -   [ ] NAT gateways are managed by AWS, reducing operational overhead compared to managing NAT instances.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. NAT instances perform a similar function to NAT gateways, but they require more management, such as scaling and patching, which increases operational overhead.
 -   [ ] C. An internet gateway allows direct communication between the VPC and the internet. This would expose the MySQL instances in the private subnet directly to the internet, which is a security risk.
@@ -2407,7 +2407,7 @@ D. Allow the Lambda execution role in the AWS KMS key policy.
 -   [ ] To allow the Lambda function to use the KMS key for decryption, you must allow the Lambda execution role in the KMS key policy.
 -   [ ] This is done by adding a statement to the key policy that grants the execution role the necessary permissions.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Lambda resource policies are used to grant other AWS accounts or services permission to invoke the Lambda function. They are not used to grant the Lambda function permissions to access other AWS services.
 -   [ ] C. Lambda function policies are the same as Lambda resource policies. They do not grant the Lambda function permissions to access other AWS services.
